--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 ---
-sudo: required
 language: python
-services:
-  - docker
+services: docker
 
 env:
   global:
@@ -11,7 +9,8 @@ env:
     - MOLECULE_DISTRO: centos7
 
 install:
-  - pip install -r requirements.txt
+  # Install test dependencies.
+  - pip install molecule docker
 
 before_script:
   # Use actual Ansible Galaxy role name for the project directory.
@@ -20,9 +19,8 @@ before_script:
   - cd steve.$ROLE_NAME
 
 script:
-  - molecule --version
-  - ansible --version
+  # Run tests.
   - molecule test
 
 notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+webhooks: https://galaxy.ansible.com/api/v1/notifications/
