--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,12 +1,12 @@
 ---
 # handlers file for php
-- name: start php-fpm.
+- name: Start php-fpm.
   service:
     name: php-fpm
     state: started
     enabled: true
 
-- name: restart php-fpm.
+- name: Restart php-fpm.
   service:
     name: php-fpm
     state: restarted
