--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -5,4 +5,4 @@
 - name: Define php_packages.
   set_fact:
     php_packages: "{{ __php_packages }}"
-  when: php_packages is not define
+  when: php_packages is not defined
