--- a/tasks/mongo.yml
+++ b/tasks/mongo.yml
@@ -17,7 +17,7 @@
 
 - name: Install mongodb.
   command: |
-          make -j{{ ansible_processor_cores|default(1) + 1 }}{{ ' 32bit' if redis_make_32bit|bool else '' }}
+          make -j{{ ansible_processor_cores|default(1) + 1 }}
           make install
   args:
     chdir: "/usr/local/src/mongo-{{ mongo_version }}"
